changed back to dataclass

--- a/tests/test_match_pairs.ipynb
+++ b/tests/test_match_pairs.ipynb
@@ -457,7 +457,7 @@
     "    cpar = read_control_par(\"tests/testing_folder/corresp/control.par\")\n",
     "    targs = read_targets(\"tests/testing_folder/frame/cam1.\", 333)\n",
     "\n",
-    "    mc = MatchedCoords(targs, cpar, cal)\n",
+    "    mc = match_coords(targs, cpar, cal)\n",
     "    pos, pnr = mc.as_arrays()\n",
     "\n",
     "    # x sorted?\n",
@@ -516,7 +516,7 @@
     "            targ.set_sum_grey_value(10)\n",
     "\n",
     "        img_pts.append(ta)\n",
-    "        mc = MatchedCoords(ta, cpar, cal)\n",
+    "        mc = match_coords(ta, cpar, cal)\n",
     "        corrected.append(mc)\n",
     "\n",
     "    _, _, num_targs = correspondences(img_pts, corrected, vpar, cpar, cals, mc)\n",
@@ -568,7 +568,7 @@
     "        targ.set_sum_grey_value(10)\n",
     "\n",
     "    img_pts.append(targs)\n",
-    "    mc = MatchedCoords(targs, cpar, cal)\n",
+    "    mc = match_coords(targs, cpar, cal)\n",
     "    corrected.append(mc)\n",
     "\n",
     "    sorted_pos, sorted_corresp, num_targs = py_correspondences(\n",
