--- a/tests/test_classes.ipynb
+++ b/tests/test_classes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
        "ap_52(k1=1000.0, k2=0.0, k3=0.0, p1=0.0, p2=0.0, scx=1.0, she=0.0)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "ap_52(k1=1e-05, k2=1e-05, k3=1e-05, p1=0.0, p2=0.0, scx=1.0, she=0.0)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "ap_52(k1=1e-05, k2=1e-05, k3=1e-05, p1=0.0, p2=0.0, scx=1.0, she=0.0)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "ap_52(k1=0.0, k2=0.0, k3=0.0, p1=0.0, p2=0.0, scx=1.0, she=0.0)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,6 +237,125 @@
    "source": [
     "tmp = ap_52()\n",
     "tmp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from openptv_python.tracking_frame_buf import Target, TargetArray\n",
+    "t = Target()\n",
+    "print(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
+      " Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
+      " Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
+      " Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
+      " Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
+      " Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
+      " Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
+      " Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
+      " Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
+      " Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([Target() for i in range(10)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0)]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TargetArray(num_targets=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
+       " Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
+       " Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
+       " Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0)]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TargetArray(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
+       "  Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
+       "  Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
+       "  Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0)],\n",
+       " [Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
+       "  Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
+       "  Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
+       "  Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0)],\n",
+       " [Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
+       "  Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
+       "  Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
+       "  Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0)]]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[TargetArray(4) for _ in range(3)]"
    ]
   },
   {
