moving forward with correspondence

--- a/tests/test_classes.ipynb
+++ b/tests/test_classes.ipynb
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
        "[Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0)]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
        " Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0)]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -349,13 +349,51 @@
        "  Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0)]]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "[TargetArray(4) for _ in range(3)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@dataclass\n",
+    "class Target:\n",
+    "    pnr: int = -999\n",
+    "    x: float = field(default_factory=float)\n",
+    "    y: float = field(default_factory=float)\n",
+    "    n: int = field(default_factory=int)\n",
+    "    nx: int = field(default_factory=int)\n",
+    "    ny: int = field(default_factory=int)\n",
+    "    sumg: int = field(default_factory=int)\n",
+    "    tnr: int = field(default_factory=int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Target()"
    ]
   },
   {
