--- a/tests/test_corresp.ipynb
+++ b/tests/test_corresp.ipynb
@@ -438,8 +438,8 @@
     "\n",
     "        cpar.num_cams = 2\n",
     "\n",
-    "        vpar.Zmin_lay[0] = -1\n",
-    "        vpar.Zmin_lay[1] = -1\n",
+    "        vpar.z_min_lay[0] = -1\n",
+    "        vpar.z_min_lay[1] = -1\n",
     "        vpar.Zmax_lay[0] = 1\n",
     "        vpar.Zmax_lay[1] = 1\n",
     "\n",
