--- a/tests/test_corresp.ipynb
+++ b/tests/test_corresp.ipynb
@@ -440,8 +440,8 @@
     "\n",
     "        vpar.z_min_lay[0] = -1\n",
     "        vpar.z_min_lay[1] = -1\n",
-    "        vpar.Zmax_lay[0] = 1\n",
-    "        vpar.Zmax_lay[1] = 1\n",
+    "        vpar.z_max_lay[0] = 1\n",
+    "        vpar.z_max_lay[1] = 1\n",
     "\n",
     "        calib = read_all_calibration(cpar.num_cams)\n",
     "        frm = generate_test_set(calib, cpar)\n",
