the notebook shows we're fine with the code, there's some small mismatch in one of the candidates

--- a/tests/test_match_pairs.ipynb
+++ b/tests/test_match_pairs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,14 +42,12 @@
     "    n_tupel,\n",
     "    # read_targets,\n",
     ")\n",
-    "from openptv_python.trafo import (correct_brown_affine, dist_to_flat, metric_to_pixel,\n",
-    "    pixel_to_metric)\n",
     "from openptv_python.trafo import correct_brown_affine, dist_to_flat, metric_to_pixel, pixel_to_metric"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +228,7 @@
        "ControlPar(num_cams=2, img_base_name=['dumbbell/cam1_Scene77_4085', 'dumbbell/cam2_Scene77_4085', 'dumbbell/cam3_Scene77_4085', 'dumbbell/cam4_Scene77_4085'], cal_img_base_name=['cal/cam1.tif', 'cal/cam2.tif', 'cal/cam3.tif', 'cal/cam4.tif'], hp_flag=1, allCam_flag=0, tiff_flag=1, imx=1280, imy=1024, pix_x=0.017, pix_y=0.017, chfield=0, mm=MultimediaPar(nlay=1, n1=1.0, n2=[1.49], d=[5.0], n3=1.33))"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +248,7 @@
        "VolumePar(X_lay=[-250.0, 250.0], z_min_lay=[-1, -1], z_max_lay=[1, 1], cn=0.01, cnx=0.3, cny=0.3, csumg=0.01, eps0=1.0, corrmin=33.0)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +299,7 @@
        "  Coord2d(pnr=12, x=-2.4936109632019527, y=-0.3293008587233351)]]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +335,7 @@
        "(0, 0)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,20 +347,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def quality_ratio(a, b):\n",
-    "    \"\"\"Return the ratio of the smaller to the larger of the two numbers.\"\"\"\n",
-    "    if a == 0 and b == 0:\n",
-    "        return 0\n",
-    "    return min(a, b) / max(a, b)"
+    "# def quality_ratio(a, b):\n",
+    "#     \"\"\"Return the ratio of the smaller to the larger of the two numbers.\"\"\"\n",
+    "#     if a == 0 and b == 0:\n",
+    "#         return 0\n",
+    "#     return float(min(a, b) / max(a, b))\n",
+    "\n",
+    "quality_ratio = lambda a, b: a / b if a < b else b / a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.2, 0.2)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "quality_ratio(5,25), quality_ratio(25,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,29 +486,41 @@
     "            continue\n",
     "\n",
     "        p2 = crd[j].pnr\n",
+    "        \n",
+    "        if p2 >= num: \n",
+    "            print(f\"{p2} is larger than {num}\")\n",
+    "            return cand\n",
+    "        \n",
     "\n",
     "        # Quality of each parameter is a ratio of the values of the\n",
     "        # size n, nx, ny and sum of grey values sumg.\n",
+    "        \n",
+    "\n",
     "        qn = quality_ratio(n, pix[p2].n)\n",
     "        qnx = quality_ratio(nx, pix[p2].nx)\n",
     "        qny = quality_ratio(ny, pix[p2].ny)\n",
     "        qsumg = quality_ratio(sumg, pix[p2].sumg)\n",
     "\n",
     "        # Enforce minimum quality values and maximum candidates.\n",
-    "        if qn < vpar.cn or qnx < vpar.cnx or qny < vpar.cny or qsumg <= vpar.csumg:\n",
+    "        if qn < vpar.cn or qnx < vpar.cnx or qny < vpar.cny or qsumg < vpar.csumg:\n",
     "            continue\n",
-    "        if len(cand) >= MAXCAND:\n",
-    "            print(f\"More candidates than {MAXCAND}: {len(cand)}\\n\")\n",
-    "            return cand\n",
     "\n",
     "        # Empirical correlation coefficient from shape and brightness\n",
     "        # parameters.\n",
     "        corr = 4 * qsumg + 2 * qn + qnx + qny\n",
     "\n",
     "        # Prefer matches with brighter targets.\n",
-    "        corr *= sumg + pix[p2].sumg\n",
+    "        corr *= (sumg + pix[p2].sumg)\n",
     "\n",
-    "        cand.append(Candidate(pnr=j, tol=d, corr=corr))\n",
+    "        \n",
+    "        tmp = Candidate(pnr=j, tol=d, corr=corr)\n",
+    "        # print(f\" good candidate {tmp} {tmp.pnr},{tmp.tol},{tmp.corr}\")\n",
+    "        \n",
+    "        cand.append(tmp)\n",
+    "        \n",
+    "        if len(cand) >= MAXCAND:\n",
+    "            print(f\"More candidates than {MAXCAND}: {len(cand)}\\n\")\n",
+    "            return cand        \n",
     "\n",
     "        # cand[count].pnr = j\n",
     "        # cand[count].tol = d\n",
@@ -500,61 +532,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-9.314445194672816 -0.31084986555208977 -9.953200377294392 -0.30912588314501416\n",
+      "looking for dot\n",
       "0 0\n",
-      "0 1 0 [Candidate()]\n",
-      "-9.318706534184727 2.7977683240799367 -9.957292209266493 2.7822532667196103\n",
+      "after find_candidate\n",
+      "0 1 0 [Candidate(pnr=3, tol=1.6089045281581617e-06, corr=160.0)]\n",
+      "set 1 values in corr_lists\n",
+      "3\n",
+      "160.0\n",
+      "1.6089045281581617e-06\n",
+      "looking for dot\n",
       "1 4\n",
-      "0 1 4 [Candidate()]\n",
-      "-9.333603966876531 5.907180418662625 -9.971597086055581 5.87443206318272\n",
+      "after find_candidate\n",
+      "0 1 4 [Candidate(pnr=2, tol=1.4474616517248957e-05, corr=160.0)]\n",
+      "set 1 values in corr_lists\n",
+      "2\n",
+      "160.0\n",
+      "1.4474616517248957e-05\n",
+      "looking for dot\n",
       "2 8\n",
-      "0 1 8 [Candidate()]\n",
-      "-9.359079647128922 9.018263419493671 -9.996059541794391 8.968293959900071\n",
+      "after find_candidate\n",
+      "0 1 8 [Candidate(pnr=1, tol=3.0513958614011064e-05, corr=160.0)]\n",
+      "set 1 values in corr_lists\n",
+      "1\n",
+      "160.0\n",
+      "3.0513958614011064e-05\n",
+      "looking for dot\n",
       "3 12\n",
+      "after find_candidate\n",
       "0 1 12 []\n",
-      "-7.014913024807366 -0.31703748369831847 -7.678659807112538 -0.31528878259099297\n",
+      "set 0 values in corr_lists\n",
+      "0\n",
+      "0.0\n",
+      "0.0\n",
+      "looking for dot\n",
       "4 1\n",
-      "0 1 1 [Candidate()]\n",
-      "-7.019324769457669 2.8534652764408297 -7.682899593784992 2.8377276009330292\n",
+      "after find_candidate\n",
+      "0 1 1 [Candidate(pnr=7, tol=1.5899338909423245e-06, corr=160.0)]\n",
+      "set 1 values in corr_lists\n",
+      "7\n",
+      "160.0\n",
+      "1.5899338909423245e-06\n",
+      "looking for dot\n",
       "5 5\n",
-      "0 1 5 [Candidate()]\n",
-      "-7.034748063756786 6.0248253777531176 -7.697721735853827 5.991605857882935\n",
+      "after find_candidate\n",
+      "0 1 5 [Candidate(pnr=6, tol=1.4306325666103258e-05, corr=160.0)]\n",
+      "set 1 values in corr_lists\n",
+      "6\n",
+      "160.0\n",
+      "1.4306325666103258e-05\n",
+      "looking for dot\n",
       "6 9\n",
-      "0 1 9 [Candidate()]\n",
-      "-7.061123229804895 9.197989918368496 -7.723068869568275 9.147298198294788\n",
+      "after find_candidate\n",
+      "0 1 9 [Candidate(pnr=5, tol=3.0176761971479098e-05, corr=160.0)]\n",
+      "set 1 values in corr_lists\n",
+      "5\n",
+      "160.0\n",
+      "3.0176761971479098e-05\n",
+      "looking for dot\n",
       "7 13\n",
+      "after find_candidate\n",
       "0 1 13 []\n",
-      "-4.623704227515317 -0.323481485481588 -5.31297032702922 -0.32170691433860904\n",
+      "set 0 values in corr_lists\n",
+      "0\n",
+      "0.0\n",
+      "0.0\n",
+      "looking for dot\n",
       "8 2\n",
-      "0 1 2 [Candidate()]\n",
-      "-4.628261489513609 2.911470286165716 -5.317353816301018 2.895499624791047\n",
+      "after find_candidate\n",
+      "0 1 2 [Candidate(pnr=11, tol=1.576016443006454e-06, corr=160.0)]\n",
+      "set 1 values in corr_lists\n",
+      "11\n",
+      "160.0\n",
+      "1.576016443006454e-06\n",
+      "looking for dot\n",
       "9 6\n",
-      "0 1 6 [Candidate()]\n",
-      "-4.644193600163481 6.147347372690982 -5.332678396620913 6.11363475805509\n",
+      "after find_candidate\n",
+      "0 1 6 [Candidate(pnr=10, tol=1.4183752675583777e-05, corr=160.0)]\n",
+      "set 1 values in corr_lists\n",
+      "10\n",
+      "160.0\n",
+      "1.4183752675583777e-05\n",
+      "looking for dot\n",
       "10 10\n",
-      "0 1 10 [Candidate()]\n",
-      "-4.671439254322197 9.385171996635536 -5.358884989198059 9.333724429867527\n",
+      "after find_candidate\n",
+      "0 1 10 [Candidate(pnr=9, tol=2.993783736021965e-05, corr=160.0)]\n",
+      "set 1 values in corr_lists\n",
+      "9\n",
+      "160.0\n",
+      "2.993783736021965e-05\n",
+      "looking for dot\n",
       "11 14\n",
+      "after find_candidate\n",
       "0 1 14 []\n",
-      "-2.135759027917407 -0.3302006617768425 -2.851105913561606 -0.32839881458488346\n",
+      "set 0 values in corr_lists\n",
+      "0\n",
+      "0.0\n",
+      "0.0\n",
+      "looking for dot\n",
       "12 3\n",
-      "0 1 3 [Candidate()]\n",
-      "-2.1404551525550826 2.971952503433454 -2.8556271307573167 2.9557361972926777\n",
+      "after find_candidate\n",
+      "0 1 3 [Candidate(pnr=15, tol=1.570132154628768e-06, corr=160.0)]\n",
+      "set 1 values in corr_lists\n",
+      "15\n",
+      "160.0\n",
+      "1.570132154628768e-06\n",
+      "looking for dot\n",
       "13 7\n",
-      "0 1 7 [Candidate()]\n",
-      "-2.156872853527042 6.275103728453374 -2.871433297389403 6.240871258854691\n",
+      "after find_candidate\n",
+      "0 1 7 [Candidate(pnr=14, tol=1.4133714388362279e-05, corr=160.0)]\n",
+      "set 1 values in corr_lists\n",
+      "14\n",
+      "160.0\n",
+      "1.4133714388362279e-05\n",
+      "looking for dot\n",
       "14 11\n",
-      "0 1 11 [Candidate()]\n",
-      "-2.1849494148097377 9.580355646794388 -2.8984638159803215 9.5281112939247\n",
+      "after find_candidate\n",
+      "0 1 11 [Candidate(pnr=13, tol=2.98537709630847e-05, corr=160.0)]\n",
+      "set 1 values in corr_lists\n",
+      "13\n",
+      "160.0\n",
+      "2.98537709630847e-05\n",
+      "looking for dot\n",
       "15 15\n",
-      "0 1 15 []\n"
+      "after find_candidate\n",
+      "0 1 15 []\n",
+      "set 0 values in corr_lists\n",
+      "0\n",
+      "0.0\n",
+      "0.0\n"
      ]
     }
    ],
@@ -619,13 +731,14 @@
     "                vpar,\n",
     "            )\n",
     "            \n",
-    "            print(xa12, ya12, xb12, yb12)\n",
+    "            # print(xa12, ya12, xb12, yb12)\n",
     "            \n",
     "\n",
     "            # origin point in the corr_list\n",
     "            corr_lists[i1][i2][i].p1 = i\n",
     "            pt1 = corrected[i1][i].pnr\n",
     "            \n",
+    "            print(\"looking for dot\")\n",
     "            print(corr_lists[i1][i2][i].p1, pt1)\n",
     "\n",
     "            # search for a conjugate point in corrected[i2]\n",
@@ -647,12 +760,14 @@
     "                calib[i2],\n",
     "            )\n",
     "            \n",
+    "            print(\"after find_candidate\")\n",
     "            print(i1, i2, pt1, cand)\n",
     "\n",
     "            # write all corresponding candidates to the preliminary corr_list of correspondences\n",
     "            count = len(cand)\n",
     "            if count > MAXCAND:\n",
     "                count = MAXCAND\n",
+    "                cand = cand[0:count]\n",
     "\n",
     "            for j in range(count):\n",
     "                corr_lists[i1][i2][i].p2[j] = cand[j].pnr\n",
@@ -660,6 +775,11 @@
     "                corr_lists[i1][i2][i].dist[j] = cand[j].tol\n",
     "\n",
     "            corr_lists[i1][i2][i].n = count\n",
+    "            \n",
+    "            print(f\"set {count} values in corr_lists\")\n",
+    "            # print(corr_lists[i1][i2][i].p2[j])\n",
+    "            # print(corr_lists[i1][i2][i].corr[j])\n",
+    "            # print(corr_lists[i1][i2][i].dist[j])\n",
     "\n",
     "\n",
     "\n"
@@ -667,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +918,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/home/user/Documents/repos/openptvpy/openptv-python/tests/test_match_pairs.ipynb Cell 16\u001b[0m line \u001b[0;36m3\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/user/Documents/repos/openptvpy/openptv-python/tests/test_match_pairs.ipynb#X42sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m                     found_correct_pnr \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/user/Documents/repos/openptvpy/openptv-python/tests/test_match_pairs.ipynb#X42sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m                     \u001b[39mbreak\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/user/Documents/repos/openptvpy/openptv-python/tests/test_match_pairs.ipynb#X42sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m             \u001b[39massert\u001b[39;00m found_correct_pnr \u001b[39mis\u001b[39;00m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/user/Documents/repos/openptvpy/openptv-python/tests/test_match_pairs.ipynb#X42sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m \u001b[39m# continue to the consistent_pair matching test\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/user/Documents/repos/openptvpy/openptv-python/tests/test_match_pairs.ipynb#X42sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m con \u001b[39m=\u001b[39m [n_tupel() \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m4\u001b[39m \u001b[39m*\u001b[39m \u001b[39m16\u001b[39m)]\n",
+      "Cell \u001b[0;32mIn[17], line 30\u001b[0m\n\u001b[1;32m     27\u001b[0m                     found_correct_pnr \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m     28\u001b[0m                     \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m---> 30\u001b[0m             \u001b[38;5;28;01massert\u001b[39;00m found_correct_pnr \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m     32\u001b[0m \u001b[38;5;66;03m# continue to the consistent_pair matching test\u001b[39;00m\n\u001b[1;32m     33\u001b[0m con \u001b[38;5;241m=\u001b[39m [n_tupel() \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m4\u001b[39m \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m16\u001b[39m)]\n",
       "\u001b[0;31mAssertionError\u001b[0m: "
      ]
     }
@@ -915,7 +1035,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "openptvpy",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -930,9 +1050,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.9"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
