working on framebuffer deque or list towards tracking

--- a/tests/test_match_pairs.ipynb
+++ b/tests/test_match_pairs.ipynb
@@ -245,7 +245,7 @@
     {
      "data": {
       "text/plain": [
-       "VolumePar(X_lay=[-250.0, 250.0], z_min_lay=[-1, -1], z_max_lay=[1, 1], cn=0.01, cnx=0.3, cny=0.3, csumg=0.01, eps0=1.0, corrmin=33.0)"
+       "VolumePar(x_lay=[-250.0, 250.0], z_min_lay=[-1, -1], z_max_lay=[1, 1], cn=0.01, cnx=0.3, cny=0.3, csumg=0.01, eps0=1.0, corrmin=33.0)"
       ]
      },
      "execution_count": 9,
